<resources>
    <string name="app_name">WhatAShot</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Required">Required</string>
    <string name="Response">Message</string>
    <string name="ok">Ok</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirmandwithdraw">Confirm &amp; Withdraw</string>
    <string name="welcometoexchange">Welcome to WhatAShot</string>
    <string name="buyyourfirstcrypto">Buy your first cryptocurrency today</string>
    <string name="coin">COINS</string>
    <string name="ruppeinr">Fund</string>
    <string name="hide_zeorbalance">Hide Zero Balances</string>
    <string name="converttowrx">Convert To WhatAShot</string>
    <string name="passwordrule">Please, use atleast 1 uppercase, 1 lowercase , 1 special character, 1 numeric &amp; atleast upto 8 characters</string>
    <string-array name="orderType">
        <item>Market</item>
        <item>Limit</item>
    </string-array>
    <string name="converttowrx_text">Convert To WRX</string>
    <string name="loin_txt">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="public_key">Public Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="get_keys">Get Keys</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_txt">Register</string>
    <string name="signup_txt">Signup</string>
    <string name="confirm_withdraw_txt">Confirm BTC Withdraw</string>
    <string name="withdraw_txt">Withdraw Bitcoin</string>
    <string name="destination_address_txt">Destination Address</string>
    <string name="amount_txt">BTC Amount</string>
    <string name="withdrawal_fee_txt">Withdrawal Fee</string>
    <string name="final_amount_txt">Final Amount(You will get)</string>
    <string name="remarks_txt">Remarks</string>
    <string name="proceed_txt">Proceed</string>
    <string name="confirm_txt">Confirm</string>
    <string name="pleas_cros">Please cross-check the destination address. withdrawals to Smart Contract Addresses, payments or participation in ICOs/Airdraps are not supported and will be lost forever. Withdrawal requests cannot be cancelled after submission.</string>
    <string name="please_depo">Please deposit only BTC to this address. If you deposit any other coins, it will be lost forever.</string>
    <string name="veriry_acco">Verify Account</string>
    <string name="security">Security</string>
    <string name="welcome_txt">Welcome</string>
    <string name="select_category">Select Type</string>
    <string name="country_warning">Select the country field.</string>
    <string name="firstname_warning">Enter The First Name.</string>
    <string name="lastname_warning">Enter The Last Name.</string>
    <string name="email_warning">Enter The Email.</string>
    <string name="dob_warning">Enter The Date Of Birth(DD-MM-YYYY).</string>
    <string name="address_warning">Enter The Address.</string>
    <string name="state_warning">Select The State.</string>
    <string name="city_warning">Enter The City.</string>
    <string name="pincode_warning">Enter The Pin Code.</string>
    <string name="pan_number_warning">Enter The PAN Number.</string>
    <string name="pan_number_match_warning">PAN Number must be match.</string>
    <string name="pan_image_warning">Select PAN Image.</string>
    <string name="adhar_number_warning">Enter Aadhaar Number.</string>
    <string name="adhar_number_match_warning">Aadhaar Number must be match.</string>
    <string name="adhar_front_image_warning">Select Aadhaar Front Image.</string>
    <string name="adhar_back_image_warning">Select Aadhaar Back Image.</string>
    <string name="national_id_front_image_warning">Select National ID Front Image.</string>
    <string name="national_id_back_image_warning">Select National ID Back Image.</string>
    <string name="selfie_image_warning">Select Selfie Image.</string>
    <string name="required">Required</string>
    <string name="select_any_two">Select any two </string>
    <string name="select_any_one">Select any one </string>
    <string name="select_your">Select Your Country</string>
    <string name="search_country">Search Country</string>
    <string name="country">Country</string>
    <string name="select_coun">Select country</string>
    <string name="type">Type</string>
    <string name="personal">personal</string>
    <string name="personal_in">Personal Info</string>
    <string name="first_name_">First Name*</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_bir">Date of birth (DD-MM-YYYY)*</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="address_">Address*</string>
    <string name="enter_last_">Enter last name</string>
    <string name="enter_city_">Enter City</string>
    <string name="state_">State*</string>
    <string name="select_stat">Select state</string>
    <string name="city_">City*</string>
    <string name="select_city">Select city</string>
    <string name="pin_zip_cod">Pin/Zip Code*</string>
    <string name="enter_code">Enter code</string>
    <string name="pan_card">Pan card</string>
    <string name="pan_number_">Pan Number*</string>
    <string name="enter_pan_n">Enter pan number</string>
    <string name="re_enter_pa">Re-Enter Pan Number*</string>
    <string name="upload_pan_">Upload Pan Card</string>
    <string name="on_desktop_">On desktop, simple and drop your file in this field. Acceptable formats:JPEG or PNG</string>
    <string name="document_ty">Document Type</string>
    <string name="document">Document</string>
    <string name="aadhaar">Aadhaar</string>
    <string name="national_id">National ID</string>
    <string name="aadhaar_num">Aadhaar Number*</string>
    <string name="enter_aadha">Enter Aadhaar number</string>
    <string name="re_enter_aa">Re-Enter Aadhaar Number*</string>
    <string name="upload_fron">Upload front of Aadhaar Card</string>
    <string name="upload_back">Upload back of Aadhaar Card</string>
    <string name="upload_self">Upload selfie while holding your Aadhaar Card</string>
    <string name="ready_to_su">Ready to submit your application?</string>
    <string name="please_veri">Please verify the details you\'re submitting. Once submitted, you won\'t be able to change it unless you</string>
    <string name="submit_for_">SUBMIT FOR VERIFICATION</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="inr_symbol">₹</string>
    <string name="some_id">₹0.0000</string>
    <string name="some_id2">₹0.0000</string>
    <string name="at_price">AT PRICE</string>
    <string name="stop_price">STOP PRICE</string>
    <string name="inr">INR</string>
    <string name="btc">BTC</string>
    <string name="lowest_pric">LOWEST PRICE</string>
    <string name="highest_pri">HIGHEST PRICE</string>
    <string name="buy_btc">BUY BTC</string>
    <string name="fee_maker_0">Fee: Maker: 0.2% | Taker: 0.2% | incl. of all applicable taxes</string>
    <string name="sell_btc">SELL BTC</string>
    <string name="poly">POLY</string>
    <string name="amount">AMOUNT</string>
    <string name="total_inr">TOTAL</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>
    <string name="done">Done</string>
    <string name="please_comp">Please Complete Your KYC</string>
    <string name="you_haven_t">You haven\'t completed your KYC. Your KYC will be approved instantly if your documents are clearly visible, and your information is correct.</string>
    <string name="here_s_what">Here\'s what you can do:</string>
    <string name="trade">Trade</string>
    <string name="deposit_cry">Deposit Crypto</string>
    <string name="deposit_inr">Deposit INR</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="without_kyc">WITHOUT KYC</string>
    <string name="submit_kyc">Submit KYC</string>
    <string name="with_kyc">WITH KYC</string>
    <string name="skip_for_no">SKIP FOR NOW</string>
    <string name="complet_kyc">COMPLETE KYC</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="p2p">P2P</string>
    <string name="fund">FUND</string>
    <string name="transfer_hi">TRANSFER HISTORY</string>
    <string name="setting_pro">Setting/Profile</string>
    <string name="name">Name</string>
    <string name="register_yo">Register your phone</string>
    <string name="currency_pr">CURRENCY PREFERENCE</string>
    <string name="verify_kyc">VERIFY KYC</string>
    <string name="payment_opt">PAYMENT OPTIONS</string>
    <string name="two_factor_">TWO FACTOR AUTHENTICATION</string>
    <string name="activity_lo">ACTIVITY LOGS</string>
    <string name="mobile">Mobile</string>
    <string name="register_ph">Register Phone</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="send_otp">SEND OTP</string>
    <string name="fa">2FA</string>
    <string name="email_verif">Email Verification</string>
    <string name="your_phone_enter_otp_s">Enter OTP sent to your mobile</string>
    <string name="authenticat">Authenticate</string>
    <string name="dob_t_recei">Don\'t receive  OTP yet?\nResend in 60 Seconds</string>
    <string name="your_phone_">Your phone number is registered\nsuccessfully.</string>
    <string name="continuee">Continue</string>
    <string name="enter_otp_s">Enter OTP sent to your mobile</string>
    <string name="select_your_preference">Select your preferred display currency for all market</string>
    <string name="reset">Reset</string>
    <string name="authenticat_app">Authenticator App</string>
    <string name="recommended">Recommended</string>
    <string name="highly_secu">Highly secure</string>
    <string name="mobile_sms">Mobile SMS</string>
    <string name="moderately_">moderately secure</string>
    <string name="none">None</string>
    <string name="not_secure">Not secure</string>
    <string name="ifsc_code">IFSC/IBAN Code</string>
    <string name="change_pwd">Change Password</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_enter_name">Enter Bank Name</string>
    <string name="bank_enter_ifsc">Enter IFSC/IBAN Code</string>
    <string name="bank_enter_account_number">Enter Account Number</string>
    <string name="bank_enter_account_holdername">Enter Account Holder Name</string>
    <string name="btranch_enter_number">Enter Branch Name</string>
    <string name="bank_account_holdername">Account Holder Name</string>
    <string name="confirm_acount">Confirm Account Number</string>
    <string name="bank_branch">Branch Name</string>
    <string name="next">Next</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="enter_otp">OTP</string>
    <string name="forgot_password_">Forgot Password</string>
</resources>