<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <fontspackageForTextView.Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/bank_account_holdername"
        android:textColor="@color/text_hint_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_gray_border"
        >

        <EditText
            android:id="@+id/ed_bank_account_holder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/bank_enter_account_holdername"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black_color"
            android:textColorHint="@color/text_hint_color" />
    </RelativeLayout>
    <fontspackageForTextView.Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bank_name"
        android:textColor="@color/text_hint_color"
        />

    <RelativeLayout
        android:id="@+id/adharNoRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_gray_border"
        >

        <EditText
            android:id="@+id/ed_bank_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/bank_enter_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black_color"
            android:textColorHint="@color/text_hint_color" />
    </RelativeLayout>


    <fontspackageForTextView.Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bank_branch"
        android:textColor="@color/text_hint_color"
        />

    <RelativeLayout
        android:id="@+id/branchNameRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_gray_border"
        >

        <EditText
            android:id="@+id/ed_branch_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/btranch_enter_number"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black_color"
            android:textColorHint="@color/text_hint_color" />
    </RelativeLayout>






    <fontspackageForTextView.Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bank_enter_account_number"
        android:textColor="@color/text_hint_color"
        />

    <RelativeLayout
        android:id="@+id/reDocRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_gray_border"
        >

        <EditText
            android:id="@+id/ed_bank_account_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/bank_enter_account_number"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black_color"
            android:textColorHint="@color/text_hint_color" />
    </RelativeLayout>




    <fontspackageForTextView.Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_acount"
        android:textColor="@color/text_hint_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_gray_border"
        >

        <EditText
            android:id="@+id/ed_bank_confirm_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_acount"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black_color"
            android:textColorHint="@color/text_hint_color" />
    </RelativeLayout>




    <fontspackageForTextView.Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/ifsc_code"
        android:textColor="@color/text_hint_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_gray_border"
        >

        <EditText
            android:id="@+id/ed_bank_ifsc_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/bank_enter_ifsc"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black_color"
            android:textColorHint="@color/text_hint_color" />
    </RelativeLayout>

</LinearLayout>