<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_20">

    <RelativeLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:background="@color/app_button_color">
        <ImageView
            android:id="@+id/img_back"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:src="@drawable/arrow"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            app:tint="@color/white">
        </ImageView>

        <fontspackageForTextView.BoldMedium
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/change_pwd"
            android:textColor="@color/white"
            android:textSize="20dp"></fontspackageForTextView.BoldMedium>

    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            >




            <fontspackageForTextView.Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/grey_dark"
                android:textSize="12dp"
                ></fontspackageForTextView.Regular>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <fontpackageforEdittext.Regular
                    android:id="@+id/ed_currentPassword"
                    android:paddingLeft="5dp"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_drawable"
                    android:hint="@string/current_password"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_dark"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:paddingRight="30dp"
                    ></fontpackageforEdittext.Regular>


            </RelativeLayout>

            <fontspackageForTextView.Regular
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/grey_dark"
                android:textSize="12dp"
                ></fontspackageForTextView.Regular>

            <fontpackageforEdittext.Regular
                android:id="@+id/ed_newPassword"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_drawable"
                android:hint="@string/new_password"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColorHint="@color/grey_dark"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:inputType="textPassword"
                ></fontpackageforEdittext.Regular>



            <fontspackageForTextView.Regular
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/grey_dark"
                android:textSize="12dp"
                ></fontspackageForTextView.Regular>

            <fontpackageforEdittext.Regular
                android:id="@+id/ed_confirmPassword"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_drawable"
                android:hint="@string/confirm_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColorHint="@color/grey_dark"
                android:textColor="@color/black"
                android:textSize="14dp"
                ></fontpackageforEdittext.Regular>




            <fontspackageForTextView.Regular
                android:layout_marginBottom="20dp"
                android:id="@+id/updateTV"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/update"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="45dp"
                android:layout_width="match_parent"
                android:background="@drawable/app_button_drawable"
                ></fontspackageForTextView.Regular>




        </LinearLayout>

    </ScrollView>
</LinearLayout>

